--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-intersection-observer": "^9.4.0",
+    "react-tabs": "^5.1.0",
     "typewriter-effect": "^2.19.0"
   },
   "devDependencies": {
